--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 						<li><a href="https://www.instagram.com/flameboff/" target="_blank">Instagrame</a></li>
 						<li><a href="https://github.com/flamebousteur" target="_blank">GitHub</a></li>
 						<li><a>Discord: flamebousteur#5111</a></li>
+						<li><a href="https://www.planetminecraft.com/member/flamebousteur/" target="_blank">planet minecraft</a></li>
 					</ul>
 				</li>
-				<li class="deroulant"><a href="https://www.planetminecraft.com/member/flamebousteur/" target="_blank">minecraft</a>
+				<li class="deroulant"><a href="minecraft">minecraft</a>
 					<ul class="sous">
 						<li>DataPack</li>
 						<li><a href="zip/tfl/the-floor-is-lava.html">the floor is lava</a></li>
