--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<li><a href="https://www.planetminecraft.com/member/flamebousteur/" target="_blank">planet minecraft</a></li>
 					</ul>
 				</li>
-				<li class="deroulant"><a href="minecraft">minecraft</a>
+				<li class="deroulant"><a href="minecraft.html">minecraft</a>
 					<ul class="sous">
 						<li>DataPack</li>
 						<li><a href="zip/tfl/the-floor-is-lava.html">the floor is lava</a></li>
