--- a/minecraft.html
+++ b/minecraft.html
@@ -29,7 +29,7 @@
 						<td><a href="zip/ui/utilily-item.html">utilitys item</a></td>
 					</tr>
 					<tr>
-						<th><img src="img/zip/shield1.png" width="100"></th>
+						<th><img src="img/zip/Shield1.png" width="100"></th>
 						<td><a href="zip/sheld/sheld.html">sheld</a></td>
 					</tr>
 					<tr>
