--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				</li>
 				<li class="deroulant"><a href="minecraft.html">minecraft</a>
 					<ul class="sous">
+						<li><a href="zip/minecraft map/index.html">my map</a></li>
 						<li>DataPack</li>
 						<li><a href="zip/tfl/the-floor-is-lava.html">the floor is lava</a></li>
 						<li><a href="zip/craftS+/craftS+.html">CraftS+</a></li>
