--- a/zip/minecraft map/index.html
+++ b/zip/minecraft map/index.html
@@ -22,8 +22,8 @@ mes maps minecraft</mark>
 </pre></p>
 		</div>
 		<div id="galery">
-			<a id="#1" href="/cove in minecraft by flamebousteur.zip"><img src="/img/cove in minecraft.png" width="300">
-			<a id="#2" href="/wisard tower by flamebousteur.zip"><img src="/img/wisard tower.png" width="300">
+			<a id="#1" href="cove in minecraft by flamebousteur.zip"><img src="img/cove in minecraft.png" width="300">
+			<a id="#2" href="wisard tower by flamebousteur.zip"><img src="img/wisard tower.png" width="300">
 		</div>
 	</body>
 </html>
