--- a/zip/minecraft map/index.html
+++ b/zip/minecraft map/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<h4><a href="../index.html">back</a></h4>
-		<div class="tl" id="tele" style='background-image:url("img/font.png");'>
+		<div class="tl" id="tele" style='background-image:url("font.png");'>
 			<p><pre>
 <mark>description:<br>
 my minecraft map</mark></p>
