--- a/zip/minecraft map/index.html
+++ b/zip/minecraft map/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="../../style.css">
 	</head>
 	<body>
-		<h4><a href="../index.html">back</a></h4>
+		<h4><a href="../../index.html">back</a></h4>
 		<div class="tl" id="tele" style='background-image:url("font.png");'>
 			<p><pre>
 <mark>description:<br>
