--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta name="description" content="Flame Bousteur Web-site">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="flamebousteur">
+		<meta name="og:image" content="img/favicon.ico">
 		<link rel="icon" href="img/favicon.ico">
 		<link rel="stylesheet" href="style.css">
 	</head>
