--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://flamebousteur.github.io">
 		<meta property="og:image" content="http://flamebousteur.github.io/img/favicon.ico">
-		<meta property="og:description" content="">
+		<meta property="og:description" content="Flamebousteur datapacks and creation">
 		<meta name="theme-color" content="#417505">
 		<link rel="icon" href="img/favicon.ico">
 		<link rel="stylesheet" href="style.css">
