--- a/minecraft.html
+++ b/minecraft.html
@@ -8,6 +8,12 @@
 		<meta name="description" content="Flame Bousteur Web-site minecraft">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="flamebousteur">
+		<meta property="og:title" content="Flame Bousteur">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://flamebousteur.github.io/minecraft.html">
+		<meta property="og:image" content="http://flamebousteur.github.io/img/favicon.ico">
+		<meta property="og:description" content="Flamebousteur minecraft creation">
+		<meta name="theme-color" content="#417505">
 		<link rel="icon" href="img/favicon.ico">
 		<link rel="stylesheet" href="style.css">
 	</head>
