--- a/zip/sheld/sheld.html
+++ b/zip/sheld/sheld.html
@@ -8,6 +8,17 @@
 		<meta name="description" content="Flame Bousteur Web-site. sheld">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="flamebousteur">
+		<meta property="og:title" content="Flamebousteur sheld datapack">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://flamebousteur.github.io/zip/craftS+/sheld.html">
+		<meta property="og:image" content="http://flamebousteur.github.io/img/favicon.ico">
+		<meta property="og:description" content="green glass + concrete powder = the best sheld 👍
+1- set the concrete powder 2 blocks around the green glass.
+2- go on the green glass.3- 25 armor stand was summon.
+4- and 3 light blue glass was set over the concrete powder.
+5- you can break the shields with snowballs.
+good game">
+		<meta name="theme-color" content="#417505">
 		<link rel="icon" href="../../img/favicon.ico">
 		<link rel="stylesheet" href="../../style.css">
 	</head>
