--- a/zip/spawner generator/spawner generator.html
+++ b/zip/spawner generator/spawner generator.html
@@ -8,6 +8,16 @@
 		<meta name="description" content="Flame Bousteur Web-site. utility item">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="flamebousteur">
+		<meta property="og:title" content="Flamebousteur spawner generator datapack">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://flamebousteur.github.io/zip/craftS+/spawner generator.html">
+		<meta property="og:image" content="http://flamebousteur.github.io/img/favicon.ico">
+		<meta property="og:description" content="5 gold block + 1 netherite block + 1 end crystal = spawner👍
+hi if you’ve always dreamed to have a spawner this data pack it's made for you.
+1- download this data pack.
+2- build the structure.
+3- a new spawner is here!
+good game. 😁">
 		<link rel="icon" href="../../img/favicon.ico">
 		<link rel="stylesheet" href="../../style.css">
 	</head>
