--- a/zip/tfl/the-floor-is-lava.html
+++ b/zip/tfl/the-floor-is-lava.html
@@ -8,6 +8,11 @@
 		<meta name="description" content="Flame Bousteur Web-site. the floor is lava">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="flamebousteur">
+		<meta property="og:title" content="Flamebousteur the floor is lava datapack">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://flamebousteur.github.io/zip/craftS+/the-floor-is-lava.html">
+		<meta property="og:image" content="http://flamebousteur.github.io/img/favicon.ico">
+		<meta property="og:description" content="just the floor is lava no more good luck 😉">
 		<link rel="icon" href="../../img/favicon.ico">
 		<link rel="stylesheet" href="../../style.css">
 	</head>
