--- a/zip/ui/utilily-item.html
+++ b/zip/ui/utilily-item.html
@@ -8,6 +8,11 @@
 		<meta name="description" content="Flame Bousteur Web-site. utility item">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="flamebousteur">
+		<meta property="og:title" content="Flamebousteur utilily item datapack">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://flamebousteur.github.io/zip/craftS+/utilily-item.html">
+		<meta property="og:image" content="http://flamebousteur.github.io/img/favicon.ico">
+		<meta property="og:description" content="no def">
 		<link rel="icon" href="../../img/favicon.ico">
 		<link rel="stylesheet" href="../../style.css">
 	</head>
