--- a/zip/minecraft map/index.html
+++ b/zip/minecraft map/index.html
@@ -8,6 +8,11 @@
 		<meta name="description" content="Flame Bousteur Web-site minecraft map">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="flamebousteur">
+		<meta property="og:title" content="Flamebousteur minecraft map">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://flamebousteur.github.io/zip/minecraft map/index.html">
+		<meta property="og:image" content="http://flamebousteur.github.io/img/favicon.ico">
+		<meta property="og:description" content="my minecraft map">
 		<link rel="icon" href="../../img/favicon.ico">
 		<link rel="stylesheet" href="../../style.css">
 	</head>
