--- a/zip/craftS+/craftS+.html
+++ b/zip/craftS+/craftS+.html
@@ -11,7 +11,7 @@
 		<meta property="og:title" content="Flamebousteur craftS+ datapack">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://flamebousteur.github.io/zip/craftS+/craftS+.html">
-		<meta property="og:image" content="http://flamebousteur.github.io/img/favicon.ico">
+		<meta property="og:image" content="http://flamebousteur.github.io/img/zip/craftS+.jpg">
 		<meta property="og:description" content="New craft for minecraft survival">
 		<meta name="theme-color" content="#417505">
 		<link rel="icon" href="../../img/favicon.ico">
