Update and rename index.html to craftS+.html

--- a/zip/craftS+/craftS+.html
+++ b/zip/craftS+/craftS+.html
@@ -10,7 +10,7 @@
 		<meta name="author" content="flamebousteur">
 		<meta property="og:title" content="Flamebousteur craftS+ datapack">
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://flamebousteur.github.io/zip/craftS+/index.html">
+		<meta property="og:url" content="https://flamebousteur.github.io/zip/craftS+/craftS+.html">
 		<meta property="og:image" content="http://flamebousteur.github.io/img/zip/craftS+.jpg">
 		<meta property="og:description" content="New craft for minecraft survival">
 		<meta name="theme-color" content="#417505">
