--- a/zip/sheld/sheld.html
+++ b/zip/sheld/sheld.html
@@ -11,7 +11,7 @@
 		<meta property="og:title" content="Flamebousteur sheld datapack">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://flamebousteur.github.io/zip/craftS+/sheld.html">
-		<meta property="og:image" content="http://flamebousteur.github.io/img/favicon.ico">
+		<meta property="og:image" content="http://flamebousteur.github.io/img/zip/Shield1.png">
 		<meta property="og:description" content="green glass + concrete powder = the best sheld 👍
 1- set the concrete powder 2 blocks around the green glass.
 2- go on the green glass.3- 25 armor stand was summon.
