--- a/zip/spawner generator/spawner generator.html
+++ b/zip/spawner generator/spawner generator.html
@@ -11,7 +11,7 @@
 		<meta property="og:title" content="Flamebousteur spawner generator datapack">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://flamebousteur.github.io/zip/craftS+/spawner generator.html">
-		<meta property="og:image" content="http://flamebousteur.github.io/img/favicon.ico">
+		<meta property="og:image" content="http://flamebousteur.github.io/img/zip/spawner generator.png">
 		<meta property="og:description" content="5 gold block + 1 netherite block + 1 end crystal = spawner👍
 hi if you’ve always dreamed to have a spawner this data pack it's made for you.
 1- download this data pack.
