--- a/zip/tfl/the-floor-is-lava.html
+++ b/zip/tfl/the-floor-is-lava.html
@@ -11,7 +11,7 @@
 		<meta property="og:title" content="Flamebousteur the floor is lava datapack">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://flamebousteur.github.io/zip/craftS+/the-floor-is-lava.html">
-		<meta property="og:image" content="http://flamebousteur.github.io/img/favicon.ico">
+		<meta property="og:image" content="http://flamebousteur.github.io/img/zip/the floor is lava.jpg">
 		<meta property="og:description" content="just the floor is lava no more good luck 😉">
 		<link rel="icon" href="../../img/favicon.ico">
 		<link rel="stylesheet" href="../../style.css">
