--- a/zip/ui/utilily-item.html
+++ b/zip/ui/utilily-item.html
@@ -11,7 +11,7 @@
 		<meta property="og:title" content="Flamebousteur utilily item datapack">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://flamebousteur.github.io/zip/craftS+/utilily-item.html">
-		<meta property="og:image" content="http://flamebousteur.github.io/img/favicon.ico">
+		<meta property="og:image" content="http://flamebousteur.github.io/img/zip/utility item.jpg">
 		<meta property="og:description" content="no def">
 		<link rel="icon" href="../../img/favicon.ico">
 		<link rel="stylesheet" href="../../style.css">
