--- a/zip/minecraft map/index.html
+++ b/zip/minecraft map/index.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<h4><a href="../../index.html">back</a></h4>
-		<div class="tl" id="tele" style='background-image:url("font.png");'>
+		<div class="tl" id="tele" style='background-image:url("2021-04-17_14.23.50.png");'>
 			<p><pre>
 <mark>description:<br>
 my minecraft map</mark></p>
