--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 <div><table>
 <tr><td><img alt="tkt"></td></tr>
 <tr><td><img alt="tkt"></td></tr>
-</table></div>
-<div><table>
+</table><table>
 <tr><td><img alt="tkt"></td></tr>
 <tr><td><img alt="tkt"></td></tr>
 </table></div>
