--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 			</ul>
 		</nav><br>
 		site en cours de developpement<br>
-		<a href="zip/tfl/the-floor-is-lava.html"><img src="img/zip/the floor is lava.jpg" width="100">the floor is lava</a>
-		<a href="zip/craftS+/craftS+.html"><img src="img/zip/craftS+.jpg" width="100">CraftS+</a>
-		<a href="zip/ui/utilily-item.html"><img src="img/zip/utility item.jpg" width="100">utilitys item</a>
-		<a href="zip/sheld/sheld.html"><img src="img/zip/Shield1.png" width="100">sheld</a>
-		<a href="zip/spawner generator/spawner generator.html"><img src="img/zip/spawner generator.png" width="100">spawner generator</a>
+		<a href="zip/tfl/the-floor-is-lava.html"><img src="img/zip/the floor is lava.jpg" width="100"></a>
+		<a href="zip/craftS+/craftS+.html"><img src="img/zip/craftS+.jpg" width="100"></a>
+		<a href="zip/ui/utilily-item.html"><img src="img/zip/utility item.jpg" width="100"></a>
+		<a href="zip/sheld/sheld.html"><img src="img/zip/Shield1.png" width="100"></a>
+		<a href="zip/spawner generator/spawner generator.html"><img src="img/zip/spawner generator.png" width="100"></a>
 	</body>
 </html>
