--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<li><a href="https://www.planetminecraft.com/member/flamebousteur/" target="_blank">planet minecraft</a></li>
 					</ul>
 				</li>
-				<li class="deroulant"><a href="minecraft.html">minecraft</a>
+				<li class="deroulant"><a href="">minecraft</a>
 					<ul class="sous">
 						<li><a href="zip/minecraft map">my map</a></li>
 						<li>DataPack</li>
