--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
 		<a href="zip/ui/utilily-item.html"><img src="img/zip/utility item.jpg" width="200"></a>
 		<a href="zip/sheld/sheld.html"><img src="img/zip/Shield1.png" width="200"></a>
 		<a href="zip/spawner generator/spawner generator.html"><img src="img/zip/spawner generator.png" width="200"></a>
+		<a href="zip/minecraft map/"><img src="zip/minecraft map/2021-04-17_14.23.50.png" width="200"></a>
 	</body>
 </html>
