--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</li>
 			</ul>
 		</nav><br>
-		<a href="zip/minecraft map/"><img src="map.png" width="200"></a>
+		<a href="zip/minecraft map/"><img src="map.png" width="200"></a><br>
 		<a href="zip/tfl/the-floor-is-lava.html"><img src="img/zip/the floor is lava.jpg" width="200"></a>
 		<a href="zip/craftS+/craftS+.html"><img src="img/zip/craftS+.jpg" width="200"></a>
 		<a href="zip/ui/utilily-item.html"><img src="img/zip/utility item.jpg" width="200"></a>
