--- a/zip/minecraft map/index.html
+++ b/zip/minecraft map/index.html
@@ -11,7 +11,7 @@
 		<meta property="og:title" content="Flamebousteur minecraft map">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://flamebousteur.github.io/zip/minecraft map/index.html">
-		<meta property="og:image" content="https://flamebousteur.github.io/zip/minecraft map/font.png">
+		<meta property="og:image" content="https://flamebousteur.github.io/map.png">
 		<meta property="og:description" content="my minecraft map">
 		<link rel="icon" href="../../img/favicon.ico">
 		<link rel="stylesheet" href="../../style.css">
