--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<div style="margin-left:auto; margin-right:auto; width:6em;">
+			<span id="msg" class="msg">copi too clipboard</span>
+		</div>
 		<p id="up" align="center" style="background-image:url('img/end portal hd.png');"><img src="img/flamebousteur.png" width="100%" alt="a"></p>
 		<nav>
 			<ul>
@@ -53,4 +56,9 @@
 			<a href="zip/spawner generator/spawner generator.html"><img src="img/zip/spawner generator.png" width="200"></a>
 		</div>
 	</body>
+	<footer>
+		<div align="center">Flamebousteur</div>
+		<a target="_blank" href="https://github.com/flamebousteur">github</a>
+	</footer>
+	<script src="script.js"></script>
 </html>
