--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<li><a href="https://www.youtube.com/channel/UCpb9cOY9nklRXTQEC6Jxctg" target="_blank">Youtube</a></li>
 						<li><a href="https://www.instagram.com/flameboff/" target="_blank">Instagrame</a></li>
 						<li><a href="https://github.com/flamebousteur" target="_blank">GitHub</a></li>
-						<li><a>Discord: flamebousteur#5111</a></li>
+						<li><a style="cursor:pointer;" onclick="copi('flamebousteur#5111')">Discord: flamebousteur#5111</a></li>
 						<li><a href="https://www.planetminecraft.com/member/flamebousteur/" target="_blank">planet minecraft</a></li>
 					</ul>
 				</li>
@@ -46,6 +46,9 @@
 				</li>
 			</ul>
 		</nav><br>
+		<div style="background-color:white;">
+			<br>
+		</div>
 		<div class="cr">
 			<a href="zip/minecraft map/"><img src="map.png" width="200"></a><br>
 			<hr>
