--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		<div style="margin-left:auto; margin-right:auto; width:6em;">
-			<span id="msg" class="msg">copi too clipboard</span>
+			<span id="msg" class="msg">copy to clipboard</span>
 		</div>
 		<p id="up" align="center" style="background-image:url('img/end portal hd.png');"><img src="img/flamebousteur.png" width="100%" alt="a"></p>
 		<nav>
