--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div style="background-color:white;">
 			<br>
 		</div>
-		<div class="cr">
+		<div id="dp-map" class="cr">
 			<a href="zip/minecraft map/"><img src="map.png" width="200"></a><br>
 			<hr>
 			<a href="zip/tfl/the-floor-is-lava.html"><img src="img/zip/the floor is lava.jpg" width="200"></a>
