--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<a href="file.html?f=the-floor-is-lava"><img src="img/zip/the-floor-is-lava.png" width="200"></a>
 			<a href="file.html?f=craftS+"><img src="img/zip/craftS+.png" width="200"></a>
 			<a href="file.html?f=utility-item"><img src="img/zip/utility-item.png" width="200"></a>
-			<a href="file.html?f=shield"><img src="img/zip/Shield.png" width="200"></a>
+			<a href="file.html?f=shield"><img src="img/zip/shield.png" width="200"></a>
 			<a href="file.html?f=spawner-generator"><img src="img/zip/spawner-generator.png" width="200"></a>
 		</div>
 	</body>
