--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 		<meta name="description" content="Flame Bousteur Web-site">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="flamebousteur">
-		<meta property="og:title" content="Flame Bousteur">
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://flamebousteur.github.io">
-		<meta property="og:image" content="http://flamebousteur.github.io/img/favicon.ico">
-		<meta property="og:description" content="Flamebousteur datapacks and creation">
+
+		<meta property="og:title"		content="Flame Bousteur">
+		<meta property="og:type"		content="website">
+		<meta property="og:url"			content="https://flamebousteur.github.io">
+		<meta property="og:image"		content="https://flamebousteur.github.io/img/favicon.ico">
+		<meta property="og:description"	content="Flamebousteur's datapacks and creation">
+
 		<meta name="theme-color" content="#417505">
 		<link rel="icon" href="img/favicon.ico">
 		<link rel="stylesheet" href="style.css">
