--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta property="og:image"		content="https://flamebousteur.github.io/img/favicon.ico">
 		<meta property="og:description"		content="Flamebousteur's datapacks and creation">
 
-		<meta name="theme-color" content="#417505">
+		<meta name="theme-color" content="#ffffff">
 		<link rel="icon" href="img/favicon.ico">
 		<link rel="stylesheet" href="style.css">
 	</head>
