--- a/file.html
+++ b/file.html
@@ -52,9 +52,9 @@ function load(){
 
 	<body>
 		<div style="margin-left:auto; margin-right:auto; width:6em;">
-			<span id="msg" class="msg">copy to clipboard</span>
+			<span id="msg" class="msg">msg</span>
 		</div>
-		<h4><a href="../../index.html">back</a></h4>
+		<h4><a href="../">back</a></h4>
 		<div class="tl" id="tele" style='background-image:url("img/zip/craftS+.png");'>
 			<p style="text-align:right;"><a id="download"><mark><img src="../../img/Nether_Star.gif" width="20">download</mark></a></p>
 			<p><pre>
