--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>
 		<div style="margin-left:auto; margin-right:auto; width:6em;">
-			<span id="msg" class="msg">copy to clipboard</span>
+			<span id="msg" class="msg">msg</span>
 		</div>
 		<p id="up" align="center" style="background-image:url('img/end portal hd.png');"><img src="img/flamebousteur.png" width="100%" alt="a"></p>
 		<nav>
@@ -55,15 +55,15 @@
 			<br>
 		</div>
 		<div id="dp-map" class="cr">
-			<a href="file.html?f=floating-island"><img src="img/zip/floating-island.png" width="200"></a>
-			<a href="file.html?f=cove-in-minecraft"><img src="/img/zip/cove-in-minecraft.png" width="200"></a>
-			<a href="file.html?f=wisard-tower"><img src="img/zip/wisard-tower.png" width="200"></a>
+			<a href="file.html?f=floating-island">	<img alt="floating-island" src="img/zip/floating-island.png" width="200"></a>
+			<a href="file.html?f=cove-in-minecraft"><img alt="cove-in-minecraft" src="/img/zip/cove-in-minecraft.png" width="200"></a>
+			<a href="file.html?f=wisard-tower">	<img alt="wisard-tower" src="img/zip/wisard-tower.png" width="200"></a>
 			<br><hr><br>
-			<a href="file.html?f=the-floor-is-lava"><img src="img/zip/the-floor-is-lava.png" width="200"></a>
-			<a href="file.html?f=craftS+"><img src="img/zip/craftS+.png" width="200"></a>
-			<a href="file.html?f=utility-item"><img src="img/zip/utility-item.png" width="200"></a>
-			<a href="file.html?f=shield"><img src="img/zip/shield.png" width="200"></a>
-			<a href="file.html?f=spawner-generator"><img src="img/zip/spawner-generator.png" width="200"></a>
+			<a href="file.html?f=the-floor-is-lava"><img alt="the-floor-is-lava" src="img/zip/the-floor-is-lava.png" width="200"></a>
+			<a href="file.html?f=craftS+">		<img alt="craftS+" src="img/zip/craftS+.png" width="200"></a>
+			<a href="file.html?f=utility-item">	<img alt="utility-item" src="img/zip/utility-item.png" width="200"></a>
+			<a href="file.html?f=shield">		<img alt="Shield.png" src="img/zip/Shield.png" width="200"></a>
+			<a href="file.html?f=spawner-generator"><img alt="spawner-generator" src="img/zip/spawner-generator.png" width="200"></a>
 		</div>
 	</body>
 	<footer>
