--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<a href="file.html?f=the-floor-is-lava"><img alt="the-floor-is-lava" src="img/zip/the-floor-is-lava.png" width="200"></a>
 			<a href="file.html?f=craftS+">		<img alt="craftS+" src="img/zip/craftS+.png" width="200"></a>
 			<a href="file.html?f=utility-item">	<img alt="utility-item" src="img/zip/utility-item.png" width="200"></a>
-			<a href="file.html?f=shield">		<img alt="shield.png" src="img/zip/Shield.png" width="200"></a>
+			<a href="file.html?f=shield">		<img alt="shield.png" src="img/zip/shield.png" width="200"></a>
 			<a href="file.html?f=spawner-generator"><img alt="spawner-generator" src="img/zip/spawner-generator.png" width="200"></a>
 		</div>
 	</body>
