--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 
 <html class="index">
 	<head>
-		<title>
+		<title id="title">
 			Flame Bousteur
 		</title>
+
+		<script src="data.js"></script>
+
 		<meta name="description" content="Flame Bousteur Web-site">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="flamebousteur">
