--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
 				<li class="deroulant"><a>minecraft</a>
 					<ul class="sous">
 						<li>map</li>
-						<li><a href="file.html?f=floating-island">floating island</a></li>
-						<li><a href="file.html?f=cove-in-minecraft">cove in minecraft</a></li>
-						<li><a href="file.html?f=wisard-tower">wisard tower</a></li>
+						<li><a href="?f=floating-island">floating island</a></li>
+						<li><a href="?f=cove-in-minecraft">cove in minecraft</a></li>
+						<li><a href="?f=wisard-tower">wisard tower</a></li>
 						<li>DataPack</li>
-						<li><a href="file.html?f=the-floor-is-lava">the floor is lava</a></li>
-						<li><a href="file.html?f=craftS+">CraftS+</a></li>
-						<li><a href="file.html?f=utility-item">utilitys item</a></li>
-						<li><a href="file.html?f=shield">sheld</a></li>
-						<li><a href="file.html?f=spawner-generator">spawner generator</a></li>
+						<li><a href="?f=the-floor-is-lava">the floor is lava</a></li>
+						<li><a href="?f=craftS+">CraftS+</a></li>
+						<li><a href="?f=utility-item">utilitys item</a></li>
+						<li><a href="?f=shield">sheld</a></li>
+						<li><a href="?f=spawner-generator">spawner generator</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -58,15 +58,15 @@
 			<br>
 		</div>
 		<div id="dp-map" class="cr">
-			<a href="file.html?f=floating-island">	<img alt="floating-island" src="img/zip/floating-island.png" width="200"></a>
-			<a href="file.html?f=cove-in-minecraft"><img alt="cove-in-minecraft" src="/img/zip/cove-in-minecraft.png" width="200"></a>
-			<a href="file.html?f=wisard-tower">	<img alt="wisard-tower" src="img/zip/wisard-tower.png" width="200"></a>
+			<a href="?f=floating-island">	<img alt="floating-island" src="img/zip/floating-island.png" width="200"></a>
+			<a href="?f=cove-in-minecraft"><img alt="cove-in-minecraft" src="/img/zip/cove-in-minecraft.png" width="200"></a>
+			<a href="?f=wisard-tower">	<img alt="wisard-tower" src="img/zip/wisard-tower.png" width="200"></a>
 			<br><hr><br>
-			<a href="file.html?f=the-floor-is-lava"><img alt="the-floor-is-lava" src="img/zip/the-floor-is-lava.png" width="200"></a>
-			<a href="file.html?f=craftS+">		<img alt="craftS+" src="img/zip/craftS+.png" width="200"></a>
-			<a href="file.html?f=utility-item">	<img alt="utility-item" src="img/zip/utility-item.png" width="200"></a>
-			<a href="file.html?f=shield">		<img alt="shield.png" src="img/zip/shield.png" width="200"></a>
-			<a href="file.html?f=spawner-generator"><img alt="spawner-generator" src="img/zip/spawner-generator.png" width="200"></a>
+			<a href="?f=the-floor-is-lava"><img alt="the-floor-is-lava" src="img/zip/the-floor-is-lava.png" width="200"></a>
+			<a href="?f=craftS+">		<img alt="craftS+" src="img/zip/craftS+.png" width="200"></a>
+			<a href="?f=utility-item">	<img alt="utility-item" src="img/zip/utility-item.png" width="200"></a>
+			<a href="?f=shield">		<img alt="shield.png" src="img/zip/shield.png" width="200"></a>
+			<a href="?f=spawner-generator"><img alt="spawner-generator" src="img/zip/spawner-generator.png" width="200"></a>
 		</div>
 	</body>
 	<footer>
