--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div style="margin-left:auto; margin-right:auto; width:6em;">
 			<span id="msg" class="msg">msg</span>
 		</div>
-		<p id="up" align="center" style="background-image:url('img/end portal hd.png');"><img src="img/flamebousteur.png" width="100%" alt="a"></p>
+		<p id="up" align="center" style="background-image:url('img/end portal hd.png');	background-size: cover;"><img src="img/flamebousteur.png" width="100%" alt="a"></p>
 		<nav>
 			<ul>
 				<li class="deroulant"><a>Social Media</a>
