--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<noscript>
+			<div style="background-color:white;">
+				plz active javascript<br>
+				svp activez le javascript<br>
+				per favore attivare javascript
+			</div>
+		</noscript>
 		<div style="margin-left:auto; margin-right:auto; width:6em;">
 			<span id="msg" class="msg">msg</span>
 		</div>
