--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 		<noscript>
 			<div style="background-color:white;">
 				plz active javascript<br>
-				svp activez le javascript<br>
-				per favore attivare javascript
+				svp activez le javascript
 			</div>
 		</noscript>
 		<div style="margin-left:auto; margin-right:auto; width:6em;">
