--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
 		<title id="title">
 			Flame Bousteur
 		</title>
-
-		<script src="data.js"></script>
-
 		<meta name="description" content="Flame Bousteur Web-site">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="flamebousteur">
@@ -47,15 +44,15 @@
 				<li class="deroulant"><a>minecraft</a>
 					<ul class="sous">
 						<li>map</li>
-						<li><a href="?f=floating-island">floating island</a></li>
-						<li><a href="?f=cove-in-minecraft">cove in minecraft</a></li>
-						<li><a href="?f=wisard-tower">wisard tower</a></li>
+						<li><a style="cursor:pointer;" onclick="load('floating-island')">floating island</a></li>
+						<li><a style="cursor:pointer;" onclick="load('cove-in-minecraft')">cove in minecraft</a></li>
+						<li><a style="cursor:pointer;" onclick="load('wisard-tower')">wisard tower</a></li>
 						<li>DataPack</li>
-						<li><a href="?f=the-floor-is-lava">the floor is lava</a></li>
-						<li><a href="?f=craftS+">CraftS+</a></li>
-						<li><a href="?f=utility-item">utilitys item</a></li>
-						<li><a href="?f=shield">sheld</a></li>
-						<li><a href="?f=spawner-generator">spawner generator</a></li>
+						<li><a style="cursor:pointer;" onclick="load('the-floor-is-lava')">the floor is lava</a></li>
+						<li><a style="cursor:pointer;" onclick="load('craftS+')">CraftS+</a></li>
+						<li><a style="cursor:pointer;" onclick="load('utility-item')">utilitys item</a></li>
+						<li><a style="cursor:pointer;" onclick="load('shield')">sheld</a></li>
+						<li><a style="cursor:pointer;" onclick="load('spawner-generator')">spawner generator</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -64,20 +61,21 @@
 			<br>
 		</div>
 		<div id="dp-map" class="cr">
-			<a href="?f=floating-island">	<img alt="floating-island" src="img/zip/floating-island.png" width="200"></a>
-			<a href="?f=cove-in-minecraft"><img alt="cove-in-minecraft" src="/img/zip/cove-in-minecraft.png" width="200"></a>
-			<a href="?f=wisard-tower">	<img alt="wisard-tower" src="img/zip/wisard-tower.png" width="200"></a>
+			<a style="cursor:pointer;" onclick="load('floating-island')">	<img alt="floating-island" src="img/zip/floating-island.png" width="200"></a>
+			<a style="cursor:pointer;" onclick="load('cove-in-minecraft')">	<img alt="cove-in-minecraft" src="/img/zip/cove-in-minecraft.png" width="200"></a>
+			<a style="cursor:pointer;" onclick="load('wisard-tower')">	<img alt="wisard-tower" src="img/zip/wisard-tower.png" width="200"></a>
 			<br><hr><br>
-			<a href="?f=the-floor-is-lava"><img alt="the-floor-is-lava" src="img/zip/the-floor-is-lava.png" width="200"></a>
-			<a href="?f=craftS+">		<img alt="craftS+" src="img/zip/craftS+.png" width="200"></a>
-			<a href="?f=utility-item">	<img alt="utility-item" src="img/zip/utility-item.png" width="200"></a>
-			<a href="?f=shield">		<img alt="shield.png" src="img/zip/shield.png" width="200"></a>
-			<a href="?f=spawner-generator"><img alt="spawner-generator" src="img/zip/spawner-generator.png" width="200"></a>
+			<a style="cursor:pointer;" onclick="load('the-floor-is-lava')">	<img alt="the-floor-is-lava" src="img/zip/the-floor-is-lava.png" width="200"></a>
+			<a style="cursor:pointer;" onclick="load('craftS+')">		<img alt="craftS+" src="img/zip/craftS+.png" width="200"></a>
+			<a style="cursor:pointer;" onclick="load('utility-item')">	<img alt="utility-item" src="img/zip/utility-item.png" width="200"></a>
+			<a style="cursor:pointer;" onclick="load('shield')">		<img alt="shield.png" src="img/zip/shield.png" width="200"></a>
+			<a style="cursor:pointer;" onclick="load('spawner-generator')">	<img alt="spawner-generator" src="img/zip/spawner-generator.png" width="200"></a>
 		</div>
+		<footer>
+			<div align="center">Flamebousteur</div>
+			<a target="_blank" href="https://github.com/flamebousteur">github</a>
+		</footer>
 	</body>
-	<footer>
-		<div align="center">Flamebousteur</div>
-		<a target="_blank" href="https://github.com/flamebousteur">github</a>
-	</footer>
+	<script src="data.js"></script>
 	<script src="script.js"></script>
 </html>
