--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 				<li class="deroulant"><a>minecraft</a>
 					<ul class="sous">
 						<li>map</li>
-						<li><a style="cursor:pointer;" onclick="load('floating-island')">floating island</a></li>
-						<li><a style="cursor:pointer;" onclick="load('cove-in-minecraft')">cove in minecraft</a></li>
-						<li><a style="cursor:pointer;" onclick="load('wisard-tower')">wisard tower</a></li>
+						<li><a onclick="load('floating-island');" >floating island</a></li>
+						<li><a onclick="load('cove-in-minecraft')">cove in minecraft</a></li>
+						<li><a onclick="load('wisard-tower')">wisard tower</a></li>
 						<li>DataPack</li>
-						<li><a style="cursor:pointer;" onclick="load('the-floor-is-lava')">the floor is lava</a></li>
-						<li><a style="cursor:pointer;" onclick="load('craftS+')">CraftS+</a></li>
-						<li><a style="cursor:pointer;" onclick="load('utility-item')">utilitys item</a></li>
-						<li><a style="cursor:pointer;" onclick="load('shield')">sheld</a></li>
-						<li><a style="cursor:pointer;" onclick="load('spawner-generator')">spawner generator</a></li>
+						<li><a onclick="load('the-floor-is-lava')">the floor is lava</a></li>
+						<li><a onclick="load('craftS+')">CraftS+</a></li>
+						<li><a onclick="load('utility-item')">utilitys item</a></li>
+						<li><a onclick="load('shield')">sheld</a></li>
+						<li><a onclick="load('spawner-generator')">spawner generator</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -61,15 +61,15 @@
 			<br>
 		</div>
 		<div id="dp-map" class="cr">
-			<a style="cursor:pointer;" onclick="load('floating-island')">	<img alt="floating-island" src="img/zip/floating-island.png" width="200"></a>
-			<a style="cursor:pointer;" onclick="load('cove-in-minecraft')">	<img alt="cove-in-minecraft" src="/img/zip/cove-in-minecraft.png" width="200"></a>
-			<a style="cursor:pointer;" onclick="load('wisard-tower')">	<img alt="wisard-tower" src="img/zip/wisard-tower.png" width="200"></a>
+			<a onclick="load('floating-island')">	<img alt="floating-island" src="img/zip/floating-island.png" width="200"></a>
+			<a onclick="load('cove-in-minecraft')"><img alt="cove-in-minecraft" src="/img/zip/cove-in-minecraft.png" width="200"></a>
+			<a onclick="load('wisard-tower')">		<img alt="wisard-tower" src="img/zip/wisard-tower.png" width="200"></a>
 			<br><hr><br>
-			<a style="cursor:pointer;" onclick="load('the-floor-is-lava')">	<img alt="the-floor-is-lava" src="img/zip/the-floor-is-lava.png" width="200"></a>
-			<a style="cursor:pointer;" onclick="load('craftS+')">		<img alt="craftS+" src="img/zip/craftS+.png" width="200"></a>
-			<a style="cursor:pointer;" onclick="load('utility-item')">	<img alt="utility-item" src="img/zip/utility-item.png" width="200"></a>
-			<a style="cursor:pointer;" onclick="load('shield')">		<img alt="shield.png" src="img/zip/shield.png" width="200"></a>
-			<a style="cursor:pointer;" onclick="load('spawner-generator')">	<img alt="spawner-generator" src="img/zip/spawner-generator.png" width="200"></a>
+			<a onclick="load('the-floor-is-lava')"><img alt="the-floor-is-lava" src="img/zip/the-floor-is-lava.png" width="200"></a>
+			<a onclick="load('craftS+')">			<img alt="craftS+" src="img/zip/craftS+.png" width="200"></a>
+			<a onclick="load('utility-item')">		<img alt="utility-item" src="img/zip/utility-item.png" width="200"></a>
+			<a onclick="load('shield')">			<img alt="Shield.png" src="img/zip/shield.png" width="200"></a>
+			<a onclick="load('spawner-generator')"><img alt="spawner-generator" src="img/zip/spawner-generator.png" width="200"></a>
 		</div>
 		<footer>
 			<div align="center">Flamebousteur</div>
