--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html class="index">
 	<head>
-		<title id="title">
+		<title id="nojs">
 			Flame Bousteur
 		</title>
 		<meta name="description" content="Flame Bousteur Web-site">
