--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
-<html class="index">
+<html class="nojs">
 	<head>
-		<title id="nojs">
+		<title id="title">
 			Flame Bousteur
 		</title>
 		<meta name="description" content="Flame Bousteur Web-site">
