--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta property="og:description"		content="Flamebousteur's datapacks and creation">
 
 		<meta name="theme-color" content="#ffffff">
-		<link rel="icon" href="img/favicon.ico">
+		<link rel="icon" href="img/favicon.svg">
 		<link rel="stylesheet" id="style" href="style.css">
 	</head>
 	<body>
