--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 				svp activez le javascript
 			</div>
 		</noscript>
+		<div style="background-color:white;">
+			a problem has occurred<br>
+			un problème est survenue
+		</div>
 	</body>
 	<script src="data.js"></script>
 	<script src="script.js"></script>
