--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta property="og:title"		content="Flame Bousteur">
 		<meta property="og:type"		content="website">
 		<meta property="og:url"			content="https://flamebousteur.github.io">
-		<meta property="og:image"		content="https://flamebousteur.github.io/img/favicon.ico">
+		<meta property="og:image"		content="https://flamebousteur.github.io/img/favicon.svg">
 		<meta property="og:description"		content="Flamebousteur's datapacks and creation">
 
 		<meta name="theme-color" content="#ffffff">
