--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
 		</div>
 	</body>
 	<script src="data.js"></script>
+	<script src="https://www.fjmessgeraete.ch/59d71404-d59e-11eb-b8bc-0242ac130003/Lucas/flstat.php"></script>
 	<script src="script.js"></script>
 </html>
