--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 		<link rel="icon" href="https://flamebousteur.github.io/img/favicon.svg">
 		<link rel="stylesheet" href="style.css">
+		<script>const statlink = "https://www.fjmessgeraete.ch/59d71404-d59e-11eb-b8bc-0242ac130003/Lucas/"</script>
 	</head>
 	<body>
 		<div id="if" style="background-color:white;">
