--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
 		<link rel="icon" href="https://flamebousteur.github.io/img/favicon.svg">
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="./ressource/reset.css">
 		<script>const statlink = "https://www.fjmessgeraete.ch/59d71404-d59e-11eb-b8bc-0242ac130003/Lucas/"</script>
-		<!--<script>const statlink = "http://192.168.1.79:8080/"</script>-->
+		<script src="./ressource/lib.js"></script>
 	</head>
 	<body>
 		<div id="if" style="background-color:white;">
