--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<script src="./ressource/lib.js"></script>
 	</head>
 	<body>
-		<div id="if" style="background-color:white;">
+		<div id="divpage" style="background-color:white;">
 			a problem has occurred<br>
 			un problème est survenue<br>
 			<noscript>
@@ -34,6 +34,11 @@
 				</div>
 			</noscript>
 		</div>
+		<footer>
+			<div align="center">Flamebousteur</div>	<a target="_blank" href="https://github.com/flamebousteur/flamebousteur.github.io">
+				github
+			</a>
+		</footer>
 	</body>
 	<script src="data.js"></script>
 	<script src="https://www.fjmessgeraete.ch/59d71404-d59e-11eb-b8bc-0242ac130003/Lucas/flstat.php"></script>
