--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="flamebousteur">
 
+		<link rel="preload" href="./img/flamebousteur.png" as="image">
+		<link rel="preload" href="./img/end portal hd.png" as="image">
+		<link rel="preload" href="./img/vrac/font-bw.png" as="image">
+		<link rel="preload" href="./img/vrac/font.png" as="image">
+		<link rel="preload" href="./style.css" as="style">
+		<link rel="preload" href="./script.js" as="script">
+		<link rel="preload" href="./ressource/lib.js" as="script">
+	
 		<meta property="og:title"	content="Flame Bousteur">
 		<meta property="og:type"	content="website">
 		<meta property="og:url"		content="https://flamebousteur.github.io/">
 		<meta property="og:image"	content="https://flamebousteur.github.io/favicon.ico">
-		<meta property="og:description"	content="Flamebousteur's datapacks and creation for minecraft">
-		<meta name="theme-color" content="#ffffff">
+		<meta property="og:description"	content="Flamebousteur's datapacks and creation">
+		<meta name="theme-color" 	content="#ffffff">
 
 		<link rel="icon" href="./favicon.ico">
 		<link rel="stylesheet" href="style.css">
@@ -37,9 +45,10 @@
 			</noscript>
 		</div>
 		<footer>
-			<div align="center">Flamebousteur</div>	<a target="_blank" href="https://github.com/flamebousteur/flamebousteur.github.io">
-				github
-			</a>
+			<div align="center"><a onclick="patpage('about')">Flamebousteur</a></div>
+			<a target="_blank" href="https://github.com/flamebousteur/flamebousteur.github.io">github</a><br><br>
+			<a onclick="patpage('privacy')">privacy policy</a><br>
+			<a onclick="patpage('confidentialite')">politique de confidentialité</a><br>
 		</footer>
 		<script>
 var data;
