--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="flamebousteur">
 
-		<link rel="preload" href="./img/flamebousteur.png" as="image">
-		<link rel="preload" href="./img/end portal hd.png" as="image">
-		<link rel="preload" href="./style.css" as="style">
-		<link rel="preload" href="./script.js" as="script">
-		<link rel="preload" href="./ressource/lib.js" as="script">
+		<link rel="preload" href="hhttps://flamebousteur.github.iottps://flamebousteur.github.io/img/flamebousteur.png" as="image">
+		<link rel="preload" href="https://flamebousteur.github.io/img/end portal hd.png" as="image">
+		<link rel="preload" href="https://flamebousteur.github.io/style.css" as="style">
+		<link rel="preload" href="https://flamebousteur.github.io/script.js" as="script">
+		<link rel="preload" href="https://flamebousteur.github.io/ressource/lib.js" as="script">
 	
     <meta statue="404">
 		<meta property="og:title" content="Flame Bousteur">
@@ -23,9 +23,9 @@
 
 		<link rel="icon" href="./favicon.ico">
 		<link rel="stylesheet" href="style.css">
-		<script src="./ressource/lib.js"></script>
+		<script src="https://flamebousteur.github.io/ressource/lib.js"></script>
 		<script>const statlink = "https://www.fjmessgeraete.ch/59d71404-d59e-11eb-b8bc-0242ac130003/Lucas/"</script>
-		<script src="script.js"></script>
+		<script src="https://flamebousteur.github.io/script.js"></script>
 	</head>
 	<body>
 		<div id="divpage" style="background-color:white;">
